feat(client-server): add multi-user access to server